--- a/styles/style.css
+++ b/styles/style.css
@@ -20,17 +20,13 @@ body {
   padding-bottom: 10px;
   background-color: #F6F6F6;
 }
-.header__btn {
-  border: none;
-  background-color: #f6f6f6;
+.header #header__btn:hover {
+  box-shadow: 1px 1px 1px black;
 }
-.header__btn:hover {
-  background-color: rgb(209, 204, 204);
-}
-.header__btn:active {
+.header #header__btn:active {
   background-color: rgb(228, 222, 222);
 }
-.header__logo {
+.header #header__logo {
   margin-right: 30px;
 }
 .header #header__phone {
@@ -40,31 +36,37 @@ body {
   padding-bottom: 5px;
 }
 .header #header__city {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-family: "PT Sans Caption";
   text-align: right;
 }
 
 .main {
   font-size: 0;
-  background-color: rgba(69, 146, 127, 0.8980392157);
-  background-image: "/images/room.png";
+  background-image: url("/FigmaStudyPakko/images/room.svg");
   max-height: 288px;
 }
 .main__btn {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-family: "PT Sans Caption";
   font-weight: bold;
   background-color: #F6F6F6;
-  border-color: #F6F6F6;
+  border: none;
   border-radius: 50px;
   color: #1FA181;
   margin-bottom: 312px;
   margin-left: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   padding-left: 25px;
   padding-right: 25px;
+}
+.main__btn:active {
+  box-shadow: 1px 1px 3px black;
+}
+
+.backgroundColorMain {
+  background-color: rgba(69, 146, 127, 0.8980392157);
 }
 
 .nav {
@@ -81,4 +83,32 @@ body {
   text-decoration: none;
   font-size: 1.6rem;
   font-family: "PT Sans Caption";
+}
+
+.footer {
+  max-height: 313px;
+}
+
+#footDivTitle {
+  font-size: 2.2rem;
+  font-family: "PT Sans Caption";
+  color: transparent;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  padding-left: 20px;
+  padding-right: 90px;
+  padding-bottom: 20px;
+  padding-top: 30px;
+  opacity: 0.7;
+}
+
+#footDivText {
+  font-size: 1.6rem;
+  font-family: "PT Sans Caption";
+  color: transparent;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 70px;
+  opacity: 0.5;
+  text-align: justify;
 }/*# sourceMappingURL=style.css.map */
