--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,20 +23,16 @@ body {
     padding-top: 15px;
     padding-bottom: 10px;
     background-color:$backGroundColHed;
-    &__btn {
-        border: none;
-        background-color: #f6f6f6;
+
+    #header__btn:hover {
+        box-shadow: 1px 1px 1px black;
     }
 
-    &__btn:hover {
-        background-color:rgb(209, 204, 204) ;
-    }
-
-    &__btn:active {
+    #header__btn:active {
         background-color: rgb(228, 222, 222); 
     }
 
-    &__logo {
+    #header__logo {
         margin-right: 30px;
     }
    
@@ -47,35 +43,42 @@ body {
         padding-bottom: 5px;
     }
     #header__city {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         font-family: "PT Sans Caption";
         text-align: right;
     }
-
 }
 
 .main {
     font-size: 0;
-    background-color: #45927FE5;
-    background-image: "/images/room.png";
+    background-image: url("/FigmaStudyPakko/images/room.svg");
     max-height: 288px;
 
     &__btn {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-family: "PT Sans Caption";
         font-weight: bold;
         background-color: $backGroundColHed;
-        border-color: $backGroundColHed;
+        border: none;
         border-radius: 50px;
         color: $mainColBtn;
         margin-bottom: 312px;
         margin-left: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding-top: 12px;
+        padding-bottom: 12px;
         padding-left: 25px;
         padding-right: 25px;
     }
+
+    &__btn:active {
+        box-shadow: 1px 1px 3px black;
+    }
 }
+
+.backgroundColorMain {
+  background-color:  $backGroundColMain;
+}
+
 .nav {
     list-style: none;
     padding-left: 20px;
@@ -89,7 +92,36 @@ body {
         text-decoration: none;
         font-size: 1.6rem;
         font-family: "PT Sans Caption";
-        
     }
+}
+
+.footer {
+    max-height: 313px;
+}
+
+#footDivTitle {
+    font-size: 2.2rem;
+    font-family: "PT Sans Caption";
+    color: transparent;
+    text-shadow: 0 0 3px rgba(0,0,0,0.5);
+
+    padding-left: 20px;
+    padding-right: 90px;
+    padding-bottom: 20px;
+    padding-top: 30px;
+    opacity: 0.7;
+}
+
+#footDivText {
+    font-size: 1.6rem;
+    font-family: "PT Sans Caption";
+    color: transparent;
+    text-shadow: 0 0 4px rgba(0,0,0,0.5);
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 70px;
+    opacity: 0.5;
+    text-align: justify;
 
 }
