--- a/styles/style.css
+++ b/styles/style.css
@@ -44,8 +44,13 @@ body {
 .main {
   font-size: 0;
   background-image: url("/FigmaStudyPakko/images/room.svg");
-  max-height: 288px;
+  max-height: 288px; 
 }
+
+.mainAdd {
+  padding-bottom: 288px;
+}
+
 .main__btn {
   font-size: 1.4rem;
   font-family: "PT Sans Caption";
@@ -87,28 +92,36 @@ body {
 
 .footer {
   max-height: 313px;
+  background-color: #F6F6F6;
 }
 
-#footDivTitle {
+
+.footDivTitle {
   font-size: 2.2rem;
   font-family: "PT Sans Caption";
-  color: transparent;
-  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+  line-height: 1.2;
+
   padding-left: 20px;
   padding-right: 90px;
   padding-bottom: 20px;
   padding-top: 30px;
-  opacity: 0.7;
 }
 
-#footDivText {
-  font-size: 1.6rem;
+.footDivText {
+  font-size: 1.5rem;
   font-family: "PT Sans Caption";
-  color: transparent;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  line-height: 1.7;
+
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 30px;
   padding-bottom: 70px;
-  opacity: 0.5;
-  text-align: justify;
-}/*# sourceMappingURL=style.css.map */
+  text-align: left;
+}
+
+.footDivBlur {
+  color: transparent;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5); 
+  opacity: 0.6; 
+}
+/*# sourceMappingURL=style.css.map */
